feat: GA4 integration and reactions (Netlify Blobs)\n\n- Inject GA4 in Base.astro (PUBLIC_GA_ID)\n- Reactions API at /api/reactions using @netlify/blobs\n- Reactions UI component and wiring on post pages\n- netlify.toml: PUBLIC_GA_ID env\n- Update .env.example with GA and push vars

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
   command = "npm run build"
   publish = "dist"
 
+[build.environment]
+  # CASCADE: Public GA4 measurement ID passed at build time
+  PUBLIC_GA_ID = "G-57N05H2588"
+
 # Edge redirect from root "/" to best locale
 [[edge_functions]]
   function = "locale-redirect"
