--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "astro-i18n": "^2.2.4",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "@netlify/blobs": "^6.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^3.4.17",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
     "@astrojs/netlify": "^6.5.7"
