refactor: simplify reactions with per-IP rate limiting and single-vote restriction

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Public key is exposed to the client; private stays server-side only.
 
 # Public VAPID key (from web-push generate-vapid-keys)
-PUBLIC_VAPID_PUBLIC_KEY=
+VAPID_PUBLIC_KEY=
 
 # Private VAPID key (server only)
 VAPID_PRIVATE_KEY=
